# exceptxx

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/exceptxx/: AssertException.h  BaseException.h  BaseExceptionImpl.h  ErrnoException.h  ExceptionHolder.h  HresultException.h  NtStatusException.h  PrecondException.h  StdException.h  ThrowHelper.h  TryCatch.h  Util.h  Win32Exception.h
include/exceptxx/extra/: CudaException.h  NppException.h
samples/: CMakeLists.txt
samples/Assert/: CMakeLists.txt  Main.cpp
samples/Errno/: CMakeLists.txt  Main.cpp
samples/Hresult/: CMakeLists.txt  Main.cpp
samples/Ntstatus/: CMakeLists.txt  Main.cpp
samples/Precond/: CMakeLists.txt  Main.cpp
samples/Std/: CMakeLists.txt  Main.cpp
samples/TryCatch/: CMakeLists.txt  Main.cpp
samples/Win32/: CMakeLists.txt  Main.cpp
